--- a/Art 75 Stuff/OurSociety/Our Society.css
+++ b/Art 75 Stuff/OurSociety/Our Society.css
@@ -1,3 +1,4 @@
+/* Header */
 header{
 	font: 15px/1.5 Arial, Helvetica,sans-serif;
 	background: #35424a;
@@ -51,6 +52,11 @@ header a:hover{
 h1 {
 	text-align: center;
 	color: white;
+}
+
+ul{
+	margin: 0;
+	padding: 0;
 }
 
 p {
