--- a/Art 75 Stuff/Knight'sLife/Style1.css
+++ b/Art 75 Stuff/Knight'sLife/Style1.css
@@ -49,6 +49,11 @@ header a:hover{
 	overflow: hidden;
 }
 
+ul{
+	margin: 0;
+	padding: 0;
+}
+
 p {
 	font-size: 24px;
 	color: white;
@@ -59,9 +64,6 @@ a {
 	font-size: 24px;
 	font-weight: bold;
 	color: white;
-
-
-
 }
 
 span.duty {
