--- a/css/WebStyle.css
+++ b/css/WebStyle.css
@@ -78,20 +78,26 @@ body{
 	}
 
 
-#burrito {
-	font-size: 18px;
-	font: helvetica;
-}
+	#burrito {
+		font-size: 18px;
+		font: helvetica;
+	}
 
-.column {
-	margin: auto;
-	width: 50%;
-	border: 3px solid green;
-	padding: 10px;
-  }
+	.column {
+		margin: auto;
+		width: 50%;
+		border: 3px solid green;
+		padding: 10px;
+	}
 
-  .image {
-	  margin: auto;
-	  width: 50%;
-	  padding: 30px;
-  }
+	.image {
+		margin: auto;
+		width: 50%;
+		padding: 30px;
+	}
+
+	.description{
+		margin: auto;
+		width: 50%;
+		padding: 30px;
+	}
