--- a/Art101-Randomizer/style.css
+++ b/Art101-Randomizer/style.css
@@ -11,11 +11,47 @@ padding: 20px;
 background-color: #3264a8;
 }
 
-.row {
-  display: flex;
+/*Header*/
+header{
+  background: #35424a;
+  color: #ffffff;
+  padding-top: 30px;
+  min-height: 70px;
+  border-bottom: #e8491d 3px solid;
 }
- 
-.column {
-  margin: 10px;
-  flex: 50%;
+
+header a{
+  color: #ffffff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 26px;
+}
+
+header li{
+  float: left;
+  display: inline;
+  padding: 0 20px 0 20px;
+}
+
+header #branding{
+  float: left;
+  
+}
+header #branding h1{
+  margin: 0;
+}
+
+header nav{
+  float: right;
+  margin-top: 10px;
+}
+
+header .highlight, header .current a{
+  color: #ff0066;
+  font-weight: bold;
+}
+
+header a:hover{
+  color: #cccccc;
+  font-weight: bold;
 }
