--- a/Art101-Randomizer/style.css
+++ b/Art101-Randomizer/style.css
@@ -55,3 +55,20 @@ header a:hover{
   color: #cccccc;
   font-weight: bold;
 }
+ul{
+  margin: 0;
+  padding: 0;
+}
+
+.container{
+  width: 80%;
+  margin: auto;
+  overflow: hidden;
+}
+
+.imageDesc{
+  font-size: 18px;
+  font: Helvetica;
+  text-align: center;
+  color: white;
+}
