--- a/Art 74 Stuff/css/WebsiteStyle.css
+++ b/Art 74 Stuff/css/WebsiteStyle.css
@@ -4,6 +4,7 @@ p { font-size: 13pt ;
 	border: 2px solid;
     padding: 20px;
     width: 350px;
+    font-family: "courier", monospace;
 }
 
 body {
