--- a/Art 75 Stuff/OurSociety/Analyst.css
+++ b/Art 75 Stuff/OurSociety/Analyst.css
@@ -1,11 +1,13 @@
 /* Header */
 header{
-	font: 15px/1.5 Arial, Helvetica,sans-serif;
+	font: 15px/1.5;
 	background: #35424a;
 	color: #ffffff;
 	padding-top: 30px;
 	min-height: 70px;
 	border-bottom: #e8491d 3px solid;
+	font-family: "courier", monospace;
+
 }
 
 header a{
@@ -53,6 +55,8 @@ p {
 	font-size: 24px;
 	color: white;
 	line-height: 2;
+	text-align: center;
+
 }
 
 a {
@@ -71,7 +75,7 @@ a:link {
 }
 
 div {
-text-align: center;
+	text-align: center;
 }
 
 ul{
