--- a/css/WebStyle.css
+++ b/css/WebStyle.css
@@ -12,7 +12,6 @@ body{
 		margin: auto;
 		overflow: hidden;
 		font-family: "courier", monospace;
-
 	}
 	ul{
 		margin: 0;
@@ -159,4 +158,15 @@ body{
 		padding: 30px;	
 		text-align: center;		
 		color: white;
+	}
+
+	.ArtistDesc{
+		text-align: center;
+		font-weight: bold;
+		line-height: 2;
+		font-size: large;
+	}
+
+	.ArtistDesc2{
+		text-align: left;
 	}
