--- a/css/AboutStyle.css
+++ b/css/AboutStyle.css
@@ -51,6 +51,7 @@ body{
 	}
 	header #branding h1{
 		margin: 0;
+		
 	}
 
 	header nav{
@@ -98,4 +99,8 @@ body{
 	.ArtistDesc2{
 		padding: 0;
 		margin: 0;
+	}
+
+	.page-title{
+		text-align: center;
 	}
